# Sota-gRPC

python-client/: pyproject.toml
